--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,29 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Spicy+Rice&family=Patua+One&display=swap');
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.landing-logo {
+  margin-top: 50px;
+  width: 200px;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.landing-header {
+  width: 450px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.landing-heading {
+  margin-top: 20px;
+  padding-top: 20px;
+  font-size: 55px;
+  font-family: 'Spicy Rice', cursive;
+  color: #ffffff;
+}
+
+#stackers-particlesjs,
+#stackers-particlesjs>canvas {
+  position: absolute;
+  width: 100%;
+  height: 60vh;
+  background-color: #000000;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  z-index: -1;
+}
+
+.landing-buttons {
+  width: 100%;
+  background-color: #ffffff !important;
+  color: #000000 !important;
+  margin-top: 20px;
+  font-family: 'Patua One', cursive;
+  font-size: 25px;
+  padding: 10px;
+  height: fit-content;
+}
+
+.landing-buttons-2 {
+  width: 100%;
+  background-color: #ffffff !important;
+  color: #000000 !important;
+  font-family: 'Patua One', cursive;
+  font-size: 20px;
+  padding: 5px;
+  height: fit-content;
+}
+
+.main-image-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.images-wrapper {
+  display: flex;
+  background-color: #ffffff;
+  width: 80%;
+  margin-top: 50px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.images-wrapper img {
+  width: fit-content;
+  max-width: 100%;
 }
