--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,13 +11,13 @@
 }
 
 .landing-header {
-  width: 450px;
+  width: 90%;
 }
 
 .landing-heading {
   margin-top: 20px;
   padding-top: 20px;
-  font-size: 55px;
+  font-size: 50px;
   font-family: 'Spicy Rice', cursive;
   color: #ffffff;
 }
@@ -39,7 +39,7 @@
   width: 100%;
   background-color: #ffffff !important;
   color: #000000 !important;
-  margin-top: 20px;
+  margin-top: 40px;
   font-family: 'Patua One', cursive;
   font-size: 25px;
   padding: 10px;
@@ -64,7 +64,7 @@
 .images-wrapper {
   display: flex;
   background-color: #ffffff;
-  width: 80%;
+  width: 90%;
   margin-top: 50px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -73,4 +73,80 @@
 .images-wrapper img {
   width: fit-content;
   max-width: 100%;
+}
+
+.info-wrapper {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.connected-wrapper {
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-top: 25px;
+  padding-bottom: 0px;
+}
+
+.info-btn-1 {
+  margin-left: 0px;
+  width: 50%;
+}
+
+.info-btn-2 {
+  margin-right: 0px;
+}
+
+.stats-container {
+  height: 90%;
+  margin-top: 5%;
+  background-color: #ffffff;
+  border-radius: 5px;
+  width: fit-content;
+  margin-left: auto;
+}
+
+.stats-heading {
+  padding-left: 20px;
+  padding-top: 20px;
+  font-size: 35px;
+  font-family: 'Patua One', cursive;
+}
+
+.stats-label {
+  text-align: left;
+  font-size: 20px;
+  font-family: 'Patua One', cursive;
+}
+
+.stats-value {
+  margin-top: 15px;
+  text-align: left;
+  font-size: 35px;
+  font-family: 'Patua One', cursive;
+}
+
+.stat-wrapper {
+  margin-top: 40px;
+}
+
+.open-in-new-icon {
+  font-size: 30px;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+
+.wallet-wrapper {
+  color: #ffffff;
+  font-size: 30px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-bottom: 10px;
+  font-family: 'Patua One', cursive;
+  line-height: 1;
+}
+
+.wallet-wrapper hr {
+  margin-bottom: 0px;
+  margin-top: 20px;
 }
