--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,6 +96,17 @@
   margin-right: 0px;
 }
 
+.info-btn-full {
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+}
+.holding-wrapper {
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+}
+
 .stats-container {
   height: 90%;
   margin-top: 5%;
@@ -103,6 +114,7 @@
   border-radius: 5px;
   width: fit-content;
   margin-left: auto;
+  padding-bottom: 25px;
 }
 
 .stats-heading {
@@ -125,8 +137,16 @@
   font-family: 'Patua One', cursive;
 }
 
+.stats-value a {
+  font-size: 30px;
+}
+
 .stat-wrapper {
   margin-top: 40px;
+}
+
+.stat-wrapper:last-of-type {
+  margin-top: 25px;
 }
 
 .open-in-new-icon {
@@ -161,8 +181,10 @@
   font-family: 'Patua One', cursive;
 }
 
-.mdl-dialog__content > p {
+.mdl-dialog__content,
+.mdl-dialog__content p {
   font-size: 20px;
+  line-height: 1.2;
 }
 
 .mdl-dialog .mdl-button {
@@ -193,4 +215,22 @@
 #mission-dialog ul {
   font-size: 16px;
   line-height: 1.8;
+}
+
+#holdings-dialog {
+  width: 80%;
+  max-height: 80%;
+}
+
+#holdings-dialog img {
+  max-width: 100%;
+}
+
+.empty-nft-holdings {
+  text-align: center;
+  width: 100%;
+}
+
+.fa {
+  vertical-align: middle;
 }
