frontend: Add download button

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -235,6 +235,29 @@
   vertical-align: middle;
 }
 
+.download-wrapper {
+  position: relative;
+}
+
+.download-tint {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.download-tint > a > .material-icons {
+  color: #ffffff;
+  font-size: 2em;
+  background-color: #000000;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 900px) {
   .landing-logo {
     width: 150px;
